uc-758 new sheets

--- a/approved.yaml
+++ b/approved.yaml
@@ -594,6 +594,11 @@ cyerberpunkredjumpstart:
   - "Cyberpunk Red"
   - "Cyberpunk Red"
 
+cyerberpunkredjumpstart2:
+  - "CyberpunkRED_Gerdofal"
+  - "Cyberpunk Red Jumpstart"
+  - "Cyberpunk Red"
+
 #CYPHER SYSTEM
 numenera:
   - "Numenera"
@@ -1166,6 +1171,12 @@ fateacceleratedes:
   - "Fate Accelerated Edition (Spanish)"
   - "Fate Accelerated" 
 
+#FEAST OF LEGENDS
+featsoflegends:
+  - "Feast_of_Legends"
+  - "Feast of Legends"
+  - "Feast of Legends"
+
 #FENG SHUI
 fengshui:
   - "Feng Shui"
@@ -1652,8 +1663,8 @@ magus:
   - "M.A.G.U.S."
 
 #MAID
-maidrpg:
-  - "Maid"
+maidrpg2:
+  - "Maid RPG"
   - "Maid the Role Playing Game"
   - "Maid the Role Playing Game"
 
@@ -3658,3 +3669,9 @@ diaspora:
   - "Diaspora"
   - "Fate"
   - "hidden"
+
+maidrpg:
+  - "Maid"
+  - "Maid the Role Playing Game"
+  - "Maid the Role Playing Game"
+  - hidden
