add Ambition & Avarice

--- a/approved.yaml
+++ b/approved.yaml
@@ -190,10 +190,10 @@ antikafr:
   - "Antika"
 
 #Ambition & Avarice
-#ambitionaveraice:
- # - "Ambition_Avarice"
-  #- "Ambition & Avarice"
-  #- "Ambition & Avarice"
+ambitionaveraice:
+  - "Ambition_Avarice"
+  - "Ambition & Avarice"
+  - "Ambition & Avarice"
 
 
 #AMBER DICELESS ROLE-PLAYING
