--- a/approved.yaml
+++ b/approved.yaml
@@ -62,6 +62,12 @@ yatzoidofficial:
   - Yatzoid
 
 #Community Sheets
+#1800 El Ocaso de la Humanidad
+1800elocasodelahumanidad:
+  - "1800 El ocaso de la humanidad"
+  - "1800 El ocaso de la humanidad"
+  - "1800 El ocaso de la humanidad"
+
 #2D20
 conan2d20:
   - "conan-2d20"
@@ -1332,6 +1338,12 @@ ghostbusterssp:
   - "Ghostbusters (Spanish)"
   - "Ghostbusters"
 
+#GOLDEN SKY STORIES
+goldenskystories:
+  - "Golden Sky Stories"
+  - "Golden Sky Stories"
+  - "Golden Sky Stories"
+
 #GUILDES
 guildesqdo:
   - "Guildes QdO"
@@ -1532,6 +1544,12 @@ cyberpunk2k20v2:
    - "Cyberpunk2k20_v2"
    - "Cyberpunk2k20 (Version 2)"
    - "Interlock System"
+
+#KAMGAMI HIGH
+kamgamihigh: 
+  - "Kagegami High"
+  - "Kagegami High"
+  - "Kagegami High"
 
 #KIDS ON BIKES
 kidsonbikes:
@@ -2841,6 +2859,12 @@ tailsofequestria:
   - "Tails of Equestria"
   - "Tails of Equestria"
 
+#TAURA
+taura:
+  - "Taura"
+  - "Taura"
+  - "Taura"
+
 #TAVERN TALES
 taverntales:
   - "Tavern-Tales"
@@ -3053,6 +3077,12 @@ victoriana2e:
   - "Victoriana 2ed"
   - "Victoriana 2nd Edition"
   - "Victoriana 2nd Edition"
+
+#VERMINE 2047
+vermine2047:
+  - "Vermine 2047"
+  - "Vermine 2047"
+  - "Vermine 2047"
 
 #VELOCITY SYSTEM
 shinobigami:
