UC-850 add games to approve, remove games not active or rencely updated

--- a/approved.yaml
+++ b/approved.yaml
@@ -347,6 +347,11 @@ mutant1984:
   - "Mutant (1984)"
   - "Basic Role-Playing"
 
+nephilim:
+  - "nephilimV5-vf"
+  - "Nephilim"
+  - "Basic Role-Playing"
+
 runequest3ed:
   - "Runequest3"
   - "RuneQuest 3rd Edition"
@@ -2489,6 +2494,12 @@ simplesystem:
   - "Simple System"
   - "Simple System"
 
+#SINGULARITY
+singularity:
+  - "Singularity"
+  - "Singularity"
+  - "Singularity"
+
 #SPACEMASTER
 cyberspace:
   - "Cyberspace"
@@ -2725,6 +2736,11 @@ nwodchangeling:
 
 nwoddemon:
   - "NWOD-Demon"
+  - "Demon: The Descent"
+  - "Storytelling System"
+
+demonthedescent:
+  - "DemonTheDescent"
   - "Demon: The Descent"
   - "Storytelling System"
 
