update yaml & rename css file

--- a/approved.yaml
+++ b/approved.yaml
@@ -1053,6 +1053,11 @@ fallout35:
   - "Fallout 3.5"
   - "Fallout: PNP"
 
+falloutvdpnp:
+  - "Fallout: Vaults & Deathclaws PNP"
+  - "Fallout: Vaults & Deathclaws PNP"
+  - "Fallout: PNP"
+
 #FANTSTIC HEROES & WITCHERY
 fantasticheros:
   - "Fantastic Heros & Witchery"
@@ -2874,12 +2879,6 @@ tailsofequestria:
   - "TailsOfEquestria"
   - "Tails of Equestria"
   - "Tails of Equestria"
-
-#TAURA
-taura:
-  - "Taura"
-  - "Taura"
-  - "Taura"
 
 #TAVERN TALES
 taverntales:
