uc-854 update translations

--- a/approved.yaml
+++ b/approved.yaml
@@ -1054,7 +1054,7 @@ fallout35:
   - "Fallout: PNP"
 
 falloutvdpnp:
-  - "Fallout: Vaults & Deathclaws PNP"
+  - "Fallout Vaults Deathclaws PNP"
   - "Fallout: Vaults & Deathclaws PNP"
   - "Fallout: PNP"
 
@@ -1377,11 +1377,6 @@ trailofcth:
   - "GUMSHOE"
 
 #GURPS
-conspiracyx:
-  - ConspiracyX
-  - Conspiracy X
-  - "GURPS"
-
 gurps:
   - "GURPS"
   - "GURPS"
@@ -2016,6 +2011,12 @@ ptu:
 pokerole:
   - "Pokerole"
   - "Pokerole"
+  - "Pokerole System"
+  - hidden
+
+pokerole2:
+  - "Pokerole 1e"
+  - "Pokerole 1st Edition"
   - "Pokerole System"
 
 #POKEMON TABLETOP ADVENTURES
@@ -2880,6 +2881,11 @@ tailsofequestria:
   - "Tails of Equestria"
   - "Tails of Equestria"
 
+#TAURA
+- "Taura"
+- "Taura"
+- "Taura"
+
 #TAVERN TALES
 taverntales:
   - "Tavern-Tales"
@@ -3050,6 +3056,11 @@ allfleshmustbeeaten:
 unisystembuffyorangel:
   - Unisystem-Buffy or Angel
   - Buffy or Angel
+  - Unisystem
+
+conspiracyx:
+  - ConspiracyX
+  - Conspiracy X
   - Unisystem
 
 #UNKNOWN ARMIES
