--- a/approved.yaml
+++ b/approved.yaml
@@ -1377,6 +1377,11 @@ trailofcth:
   - "GUMSHOE"
 
 #GURPS
+conspiracyx:
+  - ConspiracyX
+  - Conspiracy X
+  - "GURPS"
+
 gurps:
   - "GURPS"
   - "GURPS"
@@ -2008,12 +2013,6 @@ ptu:
   - "Pokemon Tabletop United"
 
 #POKEROLE SYSTEM
-pokerole:
-  - "Pokerole"
-  - "Pokerole"
-  - "Pokerole System"
-  - hidden
-
 pokerole2:
   - "Pokerole 1e"
   - "Pokerole 1st Edition"
@@ -2882,9 +2881,10 @@ tailsofequestria:
   - "Tails of Equestria"
 
 #TAURA
-- "Taura"
-- "Taura"
-- "Taura"
+taura:
+  - "Taura"
+  - "Taura"
+  - "Taura"
 
 #TAVERN TALES
 taverntales:
@@ -3056,11 +3056,6 @@ allfleshmustbeeaten:
 unisystembuffyorangel:
   - Unisystem-Buffy or Angel
   - Buffy or Angel
-  - Unisystem
-
-conspiracyx:
-  - ConspiracyX
-  - Conspiracy X
   - Unisystem
 
 #UNKNOWN ARMIES
@@ -3743,4 +3738,10 @@ maidrpg:
   - "Maid"
   - "Maid the Role Playing Game"
   - "Maid the Role Playing Game"
+  - hidden
+
+pokerole:
+  - "Pokerole"
+  - "Pokerole"
+  - "Pokerole System"
   - hidden
