--- a/approved.yaml
+++ b/approved.yaml
@@ -201,7 +201,6 @@ ambitionaveraice:
   - "Ambition & Avarice"
   - "Ambition & Avarice"
 
-
 #AMBER DICELESS ROLE-PLAYING
 lordsofgossamerandshadow:
   - "Lords-Of-Gossamer-And-Shadow"
@@ -213,6 +212,11 @@ aquelarre:
   - "Aquelarre"
   - "Aquelarre"
   - "Aquelarre"
+
+ #ARASK
+  - "Arask"
+  - "Arask"
+  - "Arask" 
 
 #ARCANE CODEX
 arcanecodex:
@@ -1554,6 +1558,11 @@ cyberpunk2k20v2:
    - "Cyberpunk2k20_v2"
    - "Cyberpunk2k20 (Version 2)"
    - "Interlock System"
+
+itrasby:
+  - "ItrasBy"
+  - "Itras By"
+  - "Itras By"
 
 #KAMGAMI HIGH
 kamgamihigh: 
@@ -2918,6 +2927,11 @@ terrorinfinityfx:
 #TESORO Y GLORIA
 tesoroygloria:
   - "Tesoro y Gloria"
+  - "Tesoro y Gloria Unofficial"
+  - "Tesoro y Gloria"
+
+tesoroygloriaofficial:
+  - "Tesoro-y-Gloria"
   - "Tesoro y Gloria"
   - "Tesoro y Gloria"
  
