fix fallout vaults""

--- a/approved.yaml
+++ b/approved.yaml
@@ -1058,7 +1058,7 @@ fallout35:
   - "Fallout: PNP"
 
 falloutvdpnp:
-  - "Fallout Vaults Deathclaws PNP"
+  - "Fallout-Vaults-and-Deathclaws"
   - "Fallout: Vaults & Deathclaws PNP"
   - "Fallout: PNP"
 
