uc-873 new sheets

--- a/approved.yaml
+++ b/approved.yaml
@@ -2077,6 +2077,11 @@ apocalypseworld2e:
   - "Apocalypse World 2nd Edition"
   - "Powered by the Apocalypse"
 
+awe2burnedover:
+  - "AW2E-Burned-Over"
+  - "Apocalypse World 2nd Edition: Burned Over"
+  - "Powered by the Apocalypse"
+
 thebureau:
   - "The Bureau"
   - "The Bureau"
@@ -3090,6 +3095,12 @@ unknownarmies3e:
   - "Unknown Armies 3e"
   - "Unknown Armies 3rd Edition"
   - "Unknown Armies 3rd Edition"
+
+#UREALMS
+urbanjungle:
+  - "Urban-Jungle"
+  - "Urban Jungle"
+  - "Urban Jungle"
 
 #UREALMS
 animecampaign:
