uc-880 sheet updates

--- a/approved.yaml
+++ b/approved.yaml
@@ -21,6 +21,11 @@ bluebeardbride:
   - "Bluebeard's Bride by Magpie Games"
   - "Powered by the Apocalypse"
 
+deltagreen2:
+  - "Delta Green 2"
+  - "Delta Green by Arc Dream Publishing"
+  - "Basic Role-Playing"
+
 earthdawnofficial:
   - "Earthdawn (FASA Official)"
   - "Earthdawn by FASA"
@@ -331,11 +336,6 @@ deltagreen:
   - "Delta Green"
   - "Basic Role-Playing"
   - hidden
-
-deltagreen2:
-  - "Delta Green 2"
-  - "Delta Green"
-  - "Basic Role-Playing"
 
 drakarochdemoner:
   - "Drakar och Demoner 6.0"
@@ -1023,6 +1023,12 @@ eratheconsortium:
   - "EratheConsortium"
   - "Era the Consortium"
   - "Era the Consortium"
+
+#FACES
+faces:
+  - "FACES (French)"
+  - "FACES"
+  - "FACES"
 
 #THE FADE
 thefade2:
@@ -1866,6 +1872,12 @@ olddragon:
   - "OldDragon"
   - "Old Dragon RPG"
   - "Old Dragon"
+
+#OLD SCHOOL ESSENTIALS
+oldschoolessentials:
+  - "Old School Essentials"
+  - "Old School Essentials"
+  - "Old School Essentials"
 
 #OLTREE
 oltreefr:
