uc-896 add one piece

--- a/approved.yaml
+++ b/approved.yaml
@@ -1940,6 +1940,12 @@ onedice:
   - "OneDice"
   - "OneDice"
 
+#ONE PIECE
+onepiece:
+  - "OnePiece_d20"
+  - "One Piece"
+  - "One Piece"
+
 #OUR LAST BEST HOPE
 ourlastbesthope:
   - "Our Last Best Hope"
