--- a/approved.yaml
+++ b/approved.yaml
@@ -684,7 +684,7 @@ castlesandcrusades:
 conan2e:
   - "Conan-2nd-Ed"
   - "Conan 2nd Edition"
-  - "Conan 2nd Edition"
+  - "d20 System"
 
 starwarssaga:
   - "Star Wars Saga Edition"
@@ -983,13 +983,19 @@ eclipsephasev2:
   - Eclipse Phase V2
   - Eclipse Phase
 
+#THE UNOFFICIAL ELDER SCROLLS RPG
+unofficialelderscrollsrpg3e:
+  - Unofficial Elder Scrolls RPG
+  - The Unofficial Elder Scrolls RPG
+  - The Unofficial Elder Scrolls RPG 3rd Edition
+
 #ELEMENTAL
 elementalrpg:
   - "Elemental"
   - "Elemental"
   - "Elemental"
 
-#ELITE DANGEROUS ROLE PLAYING GAME
+#ELITE DANGEROUS ROLE PLAYING GAMEF
 elitedangerous:
   - Elite Dangerous Role Playing Game
   - Elite Dangerous RPG
@@ -1132,6 +1138,11 @@ fatebasico:
 achtungcthulhu:
   - "Achtung! Cthulhu"
   - "Achtung! Cthulhu"
+  - "Fate"
+
+butterfly: 
+  - "ButterflyAspect"
+  - "Butterfly Aspect"
   - "Fate"
 
 demonhunters: 
@@ -3276,6 +3287,11 @@ wfrp3eFR:
 #WARHHAMMMER FANTASY 4TH EDITION
 wfrp4:
   - "WFRP4CharSheet"
+  - "Warhammer Fantasy 4th Edition"
+  - "Warhammer Fantasy Roleplay"
+
+warhammerfantasy4e:
+  - "Warhammer 4e Character Sheet"
   - "Warhammer Fantasy 4th Edition"
   - "Warhammer Fantasy Roleplay"
 
