--- a/approved.yaml
+++ b/approved.yaml
@@ -36,6 +36,11 @@ hcsvntdraconesofficial:
   - "Hc Svnt Dracones 2nd Edition by Weapons Grade Funk"
   - "Hc Svnt Dracones 2nd Edition"
 
+outbreakundeadofficial:
+  - "Outbreak"
+  - "Outbreak: Undead by Hunters Entertainment"
+  - "Outbreak: Undead"
+
 reachoftitanofficial:
   - "ReachofTitan"
   - "Reach of Titan by Third Act Publishing"
