--- a/approved.yaml
+++ b/approved.yaml
@@ -1017,6 +1017,13 @@ ellipses:
   - "Ellipses"
   - "Ellipses RPG"
 
+#EMBERWIND
+emberwind:
+  - "Emberwind"
+  - "Emberwind"
+  - "Emberwind"
+
+
 #EN LA OSCURIDAD
 intothedark:
   - "Into The Dark"
