add imperio de jade

--- a/approved.yaml
+++ b/approved.yaml
@@ -1537,6 +1537,12 @@ iconsassembledfr:
   - "ICONS Assembled (French)"
   - "ICONS"
 
+#IMPERIO DE JADE
+imperiodejade:
+  - "Império De Jade"
+  - "Império De Jade"
+  - "Império De Jade"
+
 #IMMERSION RPG RULES SYSTEM
 infected:
   - "Infected!"
