moved Tormenta to its own catagory

--- a/approved.yaml
+++ b/approved.yaml
@@ -1537,12 +1537,6 @@ iconsassembledfr:
   - "ICONS Assembled (French)"
   - "ICONS"
 
-#IMPERIO DE JADE
-imperiodejade:
-  - "Império De Jade"
-  - "Império De Jade"
-  - "Império De Jade"
-
 #IMMERSION RPG RULES SYSTEM
 infected:
   - "Infected!"
@@ -2029,21 +2023,6 @@ pathfindercazra:
   - "Pathfinder_Cazra"
   - "Pathfinder (Simple)"
   - "Pathfinder"
-
-tormentarpg:
-  - "TormentaRPG"
-  - "Tormenta (Portuguese)"
-  - "Pathfinder"
-
-tormentatabbed:
-  - "TormentaRPG_Tabbed"
-  - "Tormenta (Tabbed)"
-  - "Pathfinder"
-
-tormentarpgnew:
-  - TormentaRPG-PDF_Based
-  - Tormenta RPG (New)
-  - Pathfinder
 
 #PAVILLON NOIR 2nd EDITION
 pavillonnoir:
@@ -3056,6 +3035,27 @@ topsecret:
   - "Top Secret"
   - "Top Secret"
   - "Top Secret"
+
+#TORMENTA
+imperiodejade:
+  - "Império De Jade"
+  - "Império De Jade"
+  - "Tormenta"
+
+tormentarpg:
+  - "TormentaRPG"
+  - "Tormenta (Portuguese)"
+  - "Tormenta"
+
+tormentatabbed:
+  - "TormentaRPG_Tabbed"
+  - "Tormenta (Tabbed)"
+  - "Tormenta"
+
+tormentarpgnew:
+  - TormentaRPG-PDF_Based
+  - Tormenta RPG (New)
+  - Tormenta
 
 #TRAVEllER 
 classictraveller:
