--- a/approved.yaml
+++ b/approved.yaml
@@ -2551,6 +2551,11 @@ singularity:
   - "Singularity"
   - "Singularity"
 
+#SISTEMA DAEMON
+  - "Daemon"
+  - "Sistema Daemon"
+  - "Sistema Daemon"
+
 #SPACEMASTER
 cyberspace:
   - "Cyberspace"
