--- a/approved.yaml
+++ b/approved.yaml
@@ -2041,6 +2041,11 @@ pendragonfrench:
   - "King Arthur Pendragon (French)"
   - "Pendragon"
 
+pendragon2:
+  - "Pendragon5thEdition"
+  - "King Arthur Pendragon v5.2"
+  - "Pendragon"
+
 #PLANET MERCENARY
 planetmercenary:
   - "Planet_Mercenary"
