update pendragon name"

--- a/approved.yaml
+++ b/approved.yaml
@@ -2034,17 +2034,17 @@ pavillonnoir:
 pendragon:
   - "Pendragon"
   - "King Arthur Pendragon"
-  - "Pendragon"
+  - "King Arthur Pendragon"
 
 pendragonfrench:
   - "Pendragon-french"
   - "King Arthur Pendragon (French)"
-  - "Pendragon"
+  - "King Arthur Pendragon"
 
 pendragon2:
   - "Pendragon5thEdition"
   - "King Arthur Pendragon v5.2"
-  - "Pendragon"
+  - "King Arthur Pendragon"
 
 #PLANET MERCENARY
 planetmercenary:
