--- a/approved.yaml
+++ b/approved.yaml
@@ -428,6 +428,17 @@ beyondthewall:
   - Beyond the Wall and Other Adventures
   - "Beyond the Wall and Other Adventures"
 
+#THE BLACK HACK
+theblackhack:
+    - "Black Hack"
+    - "The Black Hack"
+    - "The Black Hack"
+
+thecthulhuhack:
+  - "The Cthulhu Hack"
+  - "The Cthulhu Hack"
+  - "The Black Hack"
+
 #BRIGANDYNE
 brigandynefr:
   - "Brigandyne"
@@ -804,11 +815,6 @@ adnd1e:
   - "AD&D_1E"
   - "Advanced 1st Edition"
   - "Advanced Dungeons & Dragons"
-
-theblackhack:
-    - "Black Hack"
-    - "The Black Hack"
-    - "Advanced Dungeons & Dragons"
 
 #ADVANCED DUNGEONS & DRAGONS 2nd Edition
 adndte:
@@ -1980,6 +1986,17 @@ ourlastbesthope:
   - "Our Last Best Hope"
   - "Our Last Best Hope"
 
+#OWN
+connectedstories:
+  - "Connected_stories"
+  - "Connected Stories"
+  - "Own TRPG"
+
+omegaverse:
+  - "Omegaverse_Trpg"
+  - "Omegaverse"
+  - "Own TRPG"
+
 #PARANOIA
 paranoia:
   - "Paranoia"
@@ -2559,7 +2576,7 @@ singularity:
 #SISTEMA DAEMON
 sistemadaemon:
   - "Daemon"
-  - "Sistema Daemon"
+  - "Sistema Daemon 2nd Edition"
   - "Sistema Daemon"
 
 #SPACEMASTER
