remove official from a key" "

--- a/approved.yaml
+++ b/approved.yaml
@@ -1000,7 +1000,7 @@ eclipsephasev2:
   - Eclipse Phase
 
 #THE UNOFFICIAL ELDER SCROLLS RPG
-unofficialelderscrollsrpg3e:
+uoelderscrollsrpg3e:
   - Unofficial Elder Scrolls RPG
   - The Unofficial Elder Scrolls RPG
   - The Unofficial Elder Scrolls RPG 3rd Edition
