--- a/approved.yaml
+++ b/approved.yaml
@@ -1411,6 +1411,11 @@ ashenstars:
   - "Ashen Stars"
   - "GUMSHOE"
 
+bubblegumshoe:
+  - "Bubblegumshoe"
+  - "Bubblegumshoe"
+  - "GUMSHOE"
+
 nightblackagents:
   - "Night Black Agents gumshoe"
   - "Night Black Agents"
