--- a/approved.yaml
+++ b/approved.yaml
@@ -1936,6 +1936,11 @@ theonering:
   - "The One Ring"
 
 #ONE ROLL ENGINE
+godlike:
+  - "Godlike"
+  - "Godlike"
+  - "One-Roll Engine"
+
 nemesis:
   - "Nemesis"
   - "Nemesis"
