--- a/approved.yaml
+++ b/approved.yaml
@@ -56,6 +56,11 @@ sportsbrawlofficial:
   - "Sports Brawl by Lost West Media"
   - "Sports Brawl"
 
+stargaterpgofficial:
+  - "Stargate-RPG"
+  - "Stargate RPG by Wyvern Gaming"
+  - "Dungeons & Dragons 5th Edition"
+
 swordandscoundreloofficial:
   - "Sword & Scoundrel"
   - "Sword & Scoundrel by Grand Heresy Press"
