--- a/approved.yaml
+++ b/approved.yaml
@@ -56,10 +56,10 @@ sportsbrawlofficial:
   - "Sports Brawl by Lost West Media"
   - "Sports Brawl"
 
-stargaterpgofficial:
-  - "Stargate-RPG"
-  - "Stargate RPG by Wyvern Gaming"
-  - "Dungeons & Dragons 5th Edition"
+#stargaterpgofficial:
+ # - "Stargate-RPG"
+ # - "Stargate RPG by Wyvern Gaming"
+ # - "Dungeons & Dragons 5th Edition"
 
 swordandscoundreloofficial:
   - "Sword & Scoundrel"
