--- a/approved.yaml
+++ b/approved.yaml
@@ -56,10 +56,10 @@ sportsbrawlofficial:
   - "Sports Brawl by Lost West Media"
   - "Sports Brawl"
 
-#stargaterpgofficial:
- # - "Stargate-RPG"
- # - "Stargate RPG by Wyvern Gaming"
- # - "Dungeons & Dragons 5th Edition"
+stargaterpgofficial:
+  - "Stargate-RPG"
+  - "Stargate RPG by Wyvern Gaming"
+  - "Dungeons & Dragons 5th Edition"
 
 swordandscoundreloofficial:
   - "Sword & Scoundrel"
@@ -415,6 +415,12 @@ battletech:
   - "BattleTech: Time of War"
   - "BattleTech 4th Edition"
 
+#BATTLE TECH
+battletechmechdestring:
+  - "MechWarrior Destiny"
+  - "MechWarrior Destiny"
+  - "BattleTech"
+
 #BEER ENGINE
 koboldsbaby:
   - "Kobolds Ate My Baby"
@@ -500,6 +506,11 @@ capharnaum:
 celerity:
   - "Celerity"
   - "Celerity"
+  - "Celerity"
+
+celeritylite:
+  - "Celerity Lite"
+  - "Celerity Lite"
   - "Celerity"
 
 #CEPHEUS ENGINE
@@ -1286,6 +1297,11 @@ stalkerscifirpg:
   - "FLOW"
 
 #FORGED IN THE DARK
+hacktheplanet:
+  - "Hack The Planet"
+  - "Hack The Planet"
+  - "Forged in the Dark"
+
 songsofthedusk:
   - "Songs for the Dusk"
   - "Songs for the Dusk"
