add by publisher for free spacer

--- a/approved.yaml
+++ b/approved.yaml
@@ -30,6 +30,11 @@ earthdawnofficial:
   - "Earthdawn (FASA Official)"
   - "Earthdawn by FASA"
   - "Earthdawn 4th Edition"
+  
+freespacer:
+  - "Free Spacer"
+  - "Free Spacer by Random Alien Games"
+  - "Free Spacer"
 
 hcsvntdraconesofficial:
   - "Hc Svnt Dracones Second Edition"
@@ -1323,12 +1328,6 @@ fragmentos:
   - "Fragmentos"
   - "Fragmentos"
   - "Fragmentos"
-
-#FREE SPACER
-freespacer:
-  - "Free Spacer"
-  - "Free Spacer"
-  - "Free Spacer"
 
 #FREEFORM UNIVERSAL
 friponeesrpg:
