--- a/approved.yaml
+++ b/approved.yaml
@@ -761,6 +761,11 @@ deadlandsclassic:
   - "Deadlands: Classic"
   - "Deadlands Classic"
 
+deadlandsclassicanniversary:
+  - "Deadlands Classic Anniversary"
+  - "Deadlands: Classic Anniversary"
+  - "Deadlands Classic"
+
 #DEGENESIS
 degenesis:
   - "Degenesis"
@@ -887,11 +892,6 @@ dnd4e:
   - "Dungeons & Dragons 4th Edition"
 
 #DUNGEONS & DRAGONS 5TH EDITION
-dnd5elegacy:
-  - "DD5thEditionLegacy"
-  - "Dungeons & Dragons 5th Edition Legacy"
-  - "Dungeons & Dragons 5th Edition"
-
 dnd5e:
   - "DnD_5e"
   - "D&D 5E (Community Contributed)"
@@ -1049,7 +1049,6 @@ emberwind:
   - "Emberwind"
   - "Emberwind"
   - "Emberwind"
-
 
 #EN LA OSCURIDAD
 intothedark:
@@ -1288,6 +1287,12 @@ fireemblemtt:
   - Xeohelios' Fire Emblem Tabletop
   - Fire Emblem Tabletop (by Xeohelios)
   - "Fire Emblem d20"
+
+#FIVE TORCHES DEEP
+fivetorchesdeep:
+  - "Five Torches Deep (FR version)"
+  - "Five Torches Deep"
+  - "Five Torches Deep"
 
 #FLASHING BLADES
 flashingblades:
@@ -1596,6 +1601,12 @@ insmv5efr:
 theindiehack:
   - TIH
   - The Indie Hack
+  - "Indie Hack Engine"
+
+#NO STONE UNTURNED
+nostoneunturned:
+  - "No Stone Unturned"
+  - "No Stone Unturned"
   - "Indie Hack Engine"
 
 #INDEX CARD RPG Core 2E
@@ -3886,3 +3897,12 @@ pokerole:
   - "Pokerole"
   - "Pokerole System"
   - "hidden"
+
+dnd5elegacy:
+  - "DD5thEditionLegacy"
+  - "Dungeons & Dragons 5th Edition Legacy"
+  - "Dungeons & Dragons 5th Edition"
+  - "hidden"
+
+
+
