add new sheets to approved.yaml

--- a/approved.yaml
+++ b/approved.yaml
@@ -3920,5 +3920,27 @@ dnd5elegacy:
   - "Dungeons & Dragons 5th Edition"
   - "hidden"
 
+championsnow:
+  - "Champions Now"
+  - "Champions Now"
+  - "Champions Now"
 
+fadingsunsv275:
+  - "Fading Suns v2.75"
+  - "Fading Suns v2.75"
+  - "Fading Suns"
 
+pendragon2:
+  - "Paladin"
+  - "Paladin"
+  - "King Arthur Pendragon"
+
+elric:
+  - "Elric"
+  - "Elric!"
+  - "Elric!"
+
+nuestroultimoverano:
+  - "Nuestro-ultimo-verano"
+  - "Nuestro Ultimo Verano"
+  - "Nuestro Ultimo Verano"
