--- a/approved.yaml
+++ b/approved.yaml
@@ -3930,7 +3930,7 @@ fadingsunsv275:
   - "Fading Suns v2.75"
   - "Fading Suns"
 
-pendragon2:
+paladin:
   - "Paladin"
   - "Paladin"
   - "King Arthur Pendragon"
@@ -3944,3 +3944,13 @@ nuestroultimoverano:
   - "Nuestro-ultimo-verano"
   - "Nuestro Ultimo Verano"
   - "Nuestro Ultimo Verano"
+
+descentintomidnight:
+  - "Descent into Midnight"
+  - "Descent into Midnight"
+  - "Descent into Midnight"
+
+hardboiled:
+  - "Hardboiled"
+  - "Hardboiled"
+  - "Hardboiled"
