updated pug comple

--- a/Ironsworn_v2/precompiled/package.json
+++ b/Ironsworn_v2/precompiled/package.json
@@ -1,14 +1,15 @@
 {
   "name": "ironsworn",
-  "version": "0.0.1",
-  "description": "roll20 character sheet for the table top rpg ironsworn",
+  "version": "2.0.0",
+  "description": "Roll20 character sheet for the RPG Ironsworn",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pug:build": "pug -w . -o ./html -P"
   },
   "author": "Ayethin",
   "dependencies": {
-    "gulp": "^4.0.2",
-    "pug": "^2.0.4"
+    "gulp": "4.0.2",
+    "pug": "2.0.4",
+    "pug-cli": "1.0.0-alpha6"
   }
 }
