moves files to src dir

--- a/Ironsworn_v2/precompiled/package.json
+++ b/Ironsworn_v2/precompiled/package.json
@@ -4,12 +4,18 @@
   "description": "Roll20 character sheet for the RPG Ironsworn",
   "main": "index.js",
   "scripts": {
-    "pug:build": "pug -w . -o ./html -P"
+    "build:pug": "pug -w . -o ./html -P",
+    "build:css": "stylus"
   },
   "author": "Ayethin",
   "dependencies": {
     "gulp": "4.0.2",
     "pug": "2.0.4",
-    "pug-cli": "1.0.0-alpha6"
+    "pug-cli": "1.0.0-alpha6",
+    "stylus": "0.54.7",
+    "webpack": "^4.42.1"
+  },
+  "devDependencies": {
+    "html-loader": "^1.1.0"
   }
 }
