updated folder structure

--- a/Ironsworn_v2/precompiled/package.json
+++ b/Ironsworn_v2/precompiled/package.json
@@ -4,7 +4,7 @@
   "description": "Roll20 character sheet for the RPG Ironsworn",
   "main": "index.js",
   "scripts": {
-    "build:pug": "pug -w . -o ./html -P",
+    "build:pug": "pug -w ./src -o ./html -P",
     "build:css": "stylus"
   },
   "author": "Ayethin",
