moved templates dir

--- a/Ironsworn_v2/precompiled/package.json
+++ b/Ironsworn_v2/precompiled/package.json
@@ -13,9 +13,9 @@
     "pug": "2.0.4",
     "pug-cli": "1.0.0-alpha6",
     "stylus": "0.54.7",
-    "webpack": "^4.42.1"
+    "webpack": "4.42.1"
   },
   "devDependencies": {
-    "html-loader": "^1.1.0"
+    "html-loader": "1.1.0"
   }
 }
