--- a/Ironsworn_v2/precompiled/package.json
+++ b/Ironsworn_v2/precompiled/package.json
@@ -2,20 +2,30 @@
   "name": "ironsworn",
   "version": "2.0.0",
   "description": "Roll20 character sheet for the RPG Ironsworn",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "build:pug": "pug -w ./src -o ./html -P",
-    "build:css": "stylus"
+    "build:css": "stylus",
+    "build:html": "webpack html --config webpack.config.js",
+    "dev": "webpack-dev-server html --config webpack.dev.js --mode development"
   },
   "author": "Ayethin",
   "dependencies": {
     "gulp": "4.0.2",
+    "normalize.css": "^8.0.1",
     "pug": "2.0.4",
     "pug-cli": "1.0.0-alpha6",
-    "stylus": "0.54.7",
-    "webpack": "4.42.1"
+    "stylus": "0.54.7"
   },
   "devDependencies": {
-    "html-loader": "1.1.0"
+    "css-loader": "^3.4.2",
+    "extract-loader": "^5.0.1",
+    "file-loader": "^6.0.0",
+    "html-loader": "1.1.0",
+    "html-webpack-plugin": "^4.0.4",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
