added working asset template

--- a/Ironsworn_v2/precompiled/package.json
+++ b/Ironsworn_v2/precompiled/package.json
@@ -2,10 +2,10 @@
   "name": "ironsworn",
   "version": "2.0.0",
   "description": "Roll20 character sheet for the RPG Ironsworn",
-  "main": "main.js",
+  "main": "index.html",
   "scripts": {
-    "build:pug": "pug -w ./src -o ./html -P",
-    "build:css": "stylus",
+    "build:pug": "NODE_OPTIONS=--max_old_space_size=8192 pug -w ./src -o ./html -P",
+    "build:css": "stylus .",
     "build:prod": "webpack html --config webpack.prod.js",
     "build:dev": "webpack html --config webpack.dev.js",
     "dev": "webpack-dev-server html --open --config webpack.dev.js"
