updated naming to lowercase

--- a/Ironcrunch/src/package.json
+++ b/Ironcrunch/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ironcrunch",
   "version": "0.0.1",
-  "description": "Roll20 character sheet for the RPG Ironcrunch",
+  "description": "Roll20 character sheet for the RPG ironcrunch",
   "main": "index.html",
   "scripts": {
     "build:pug": "pug -w ./src -o ./html -P",
