moved around directories

--- a/Ironcrunch/src/package.json
+++ b/Ironcrunch/src/package.json
@@ -4,8 +4,8 @@
   "description": "Roll20 character sheet for the RPG ironcrunch",
   "main": "ironcrunch.html",
   "scripts": {
-    "build:pug": "pug -w ./src -o ../dist -P",
-    "build:css": "stylus -w ./src -o ../dist"
+    "build:pug": "pug -w . -o ../dist -P",
+    "build:css": "stylus -w . -o ../dist"
   },
   "author": "Ayethin",
   "dependencies": {
