added new migrated sheets

--- a/Ironcrunch/src/package.json
+++ b/Ironcrunch/src/package.json
@@ -5,7 +5,8 @@
   "main": "ironcrunch.html",
   "scripts": {
     "build:pug": "pug -w . -o ../dist -P",
-    "build:css": "stylus -w . -o ../dist"
+    "build:css": "stylus -w . -o ../dist",
+    "cleanup": "mv ../dist/Ironcrunch.html ../Ironcrunch.html && mv ../dist/Ironcrunch.css ../Ironcrunch.css"
   },
   "author": "Ayethin",
   "dependencies": {
