--- a/Ironcrunch/src/package.json
+++ b/Ironcrunch/src/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:pug": "pug -w . -o ../dist -P",
     "build:css": "stylus -w . -o ../dist",
-    "cleanup": "mv ../dist/Ironcrunch.html ../Ironcrunch.html && mv ../dist/Ironcrunch.css ../Ironcrunch.css"
+    "migrate": "mv ../dist/Ironcrunch.html ../Ironcrunch.html && mv ../dist/Ironcrunch.css ../Ironcrunch.css"
   },
   "author": "Ayethin",
   "dependencies": {
