fixing small typos

--- a/approved.yaml
+++ b/approved.yaml
@@ -848,7 +848,7 @@ lotfp:
 
 #ADVANCED DUNGEONS & DRAGONS
 adnd1e:
-  - "AD&D_1E"
+  - "ADnD_1E"
   - "Advanced 1st Edition"
   - "Advanced Dungeons & Dragons"
 
@@ -3996,19 +3996,7 @@ fistfulofdarkness:
   - "A Fistful of Darkness"
   - "Forged in the Dark"
 
-# ASK
 startreklastunicorn:
   - "Star Trek Last Unicorn"
   - "Star Trek"
   - "Icon System"
-
-#might not because tables
-emysfer:
-  - "Emysfer"
-  - "Emysfer"
-  - "Emysfer"
-
-sotheresaplague:
-  - "So there's a plague"
-  - "So, there is a plague on"
-  - "So, there is a plague on"
