remove unused files and updat readme

--- a/Trophy Gold/package.json
+++ b/Trophy Gold/package.json
@@ -14,17 +14,13 @@
     "compile:pug": "pug pug.pug pug.html -w",
     "manual:pug": "pug pug.pug pug.html"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/clevett/SheetTemplate.git"
-  },
   "keywords": [
     "Roll20"
   ],
   "author": "Cassie Levett",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/clevett/SheetTemplate/issues"
+    "url": "https://github.com/Roll20/roll20-character-sheets/issues"
   },
-  "homepage": "https://github.com/clevett/SheetTemplate#readme"
+  "homepage": "http://emeraldproductions.info/"
 }
