update yaml with new sheet

--- a/approved.yaml
+++ b/approved.yaml
@@ -193,7 +193,7 @@ agon:
 
 agonofficial:
   - "Agon Official"
-  - "Agon by John Harper and Sean Nittner"
+  - "AGON by Evil Hat Productions"
   - "Agon"
 
 #ALIENS COLONIAL MARINES
@@ -733,6 +733,11 @@ conan2e:
   - "Conan 2nd Edition"
   - "d20 System"
 
+lme:
+  - "LME_sheet"
+  - "LME"
+  - "d20 System"
+
 starwarssaga:
   - "Star Wars Saga Edition"
   - "Star Wars Saga Edition"
@@ -1208,6 +1213,11 @@ dresdenfiles:
   - "Dresden Files"
   - "Fate"
 
+dresdenfilesroleplayinggame:
+  - "Dresden Files Role-Playing Game"
+  - "Dresden Files Role-Playing Game"
+  - "Fate"
+
 fatejadepunk:
   - "Fate_Jadepunk"
   - "Jadepunk"
@@ -1477,6 +1487,11 @@ gurpsstyletwo:
   - "GURPS (Style #2)"
   - "GURPS"
 
+supersrevisededition:
+  - "Supers-Revised-Edition"
+  - "Supers Revised Edition"
+  - "GURPS"
+
 #HACKMASTER
 hackmaster5e:
   - "HackMaster_5E"
@@ -1494,6 +1509,12 @@ halomythic:
   - "Halo_Mythic"
   - "Halo Mythic"
   - "Halo Mythic"
+
+halomythic35e:
+  - "Halo_Mythic_3dot5"
+  - "Halo Mythic 3.5"
+  - "Halo Mythic"
+
 
 #HARN
 harn:
@@ -1541,6 +1562,10 @@ hellywood:
   - "Hellywood"
   - "Hellywood"
   - "Hellywood"
+#HERMANOS DE SANGRE
+  - "Hermanos-de-sangre"
+  - "Hermanos de sangre"
+  - "Hermanos de sangre"
 
 #HERO KIDS
 herokids:
@@ -1606,6 +1631,12 @@ insmv5efr:
   - "INS-MV_5E"
   - "In Nomine Satanis / Magna Veritas 5th Edition (French)"
   - "In Nomine Satanis 5th Edition"
+
+#Inspectres, inc
+inspectresinc:
+  - "Inspectress-Inc"
+  - "Inspectres, inc"
+  - "Inspectres"
 
 #INDIE HACK ENGINE
 theindiehack:
@@ -2012,6 +2043,7 @@ openlegendmin:
   - "Open Legend (Minimalist)"
   - "Open Legend"
 
+
 #OUTLAND SYSTEM
 mutantepoch:
   - "The Mutant Epoch"
@@ -2357,6 +2389,11 @@ worldofdungeons:
   - "World of Dungeons"
   - "Powered by the Apocalypse"
 
+worldoflies:
+  - "WorldOfLies"
+  - "World of Lies"
+  - "Powered by the Apocalypse"
+
 #PROPHECY 2nd EDITION
 prophecy2:
   - "Prophecy 2"
@@ -2651,6 +2688,12 @@ sistemadaemon:
   - "Daemon"
   - "Sistema Daemon 2nd Edition"
   - "Sistema Daemon"
+
+#So there's a plague on
+sotheresaplagueon:
+  - "So there's a plague on"
+  - "So there's a plague on"
+  - "So there's a plague on"
 
 #SPACEMASTER
 cyberspace:
@@ -3115,6 +3158,12 @@ mechaandmonsters:
   - Mecha and Monsters
   - "Tiny Frontiers"
 
+tinyd6games:
+  - "Tiny D6 Games"
+  - "Tiny D6 Games"
+  - "Tiny Frontiers"
+
+
 #TOON
 toon:
   - "Toon"
@@ -3191,6 +3240,12 @@ trollbabe:
   - Trollbabe
   - Trollbabe
   - Trollbabe
+
+#Tropy Gold
+trophygold:
+  - "Trophy Gold"
+  - "Trophy Gold"
+  - "Trophy Gold"
 
 #TRUE 20
 true20:
